Begin Run a SKALE Chain Docs

--- a/src/content/docs/run-a-skale-chain/customize-schain.mdx
+++ b/src/content/docs/run-a-skale-chain/customize-schain.mdx
@@ -1,4 +1,41 @@
 ---
-title: Gas Fees
-description: Gas Fees on SKALE
+title: Customize SKALE Chain
+description: Explore the various configuration and features available to configure on your sChain
 ---
+
+This page explores the various ways that SKALE Chains can be configured. Want to customize your chain in a way not found here?
+Head over to the [SKALE Forum](https://forum.skale.network) and share your ideas or join the SKALE team in [Discord](https://discord.gg/skale) to share
+your idea(s)!
+
+## State Configuration
+
+One of the most important decisions made when creating a new SKALE Chain is where the state is going to be allocated.
+There are three areas that node storage is allocatable too:
+
+1. **Consensus Database**: the area of the node responsible for storing block data
+2. **Contract Storage**: the area of the node that stores active contract state
+3. **Filestorage**: the area of the node responsible for storing files uploaded or replicated via SKALE Filestorage
+
+The following configurations are available:
+
+{/* <!-- TODO need full list of configuration options w/ graphics --> */}
+{/* <!-- Max State: 90% contract, 10% consensus, max filestorage: 80% filestorage, 10% state, 10% consensus, max consensus: 90% consensus, 10% state, default: 33% each --> */}
+
+## Config Controller Configurations
+
+SKALE Chains have two options when it comes to transaction processing.
+
+- **Standard Processing**: allows for a single transaction per wallet per block. Great for chains interested in more robust protections
+- **Multi-transaction Mode**: great for chains catering to high-throughput applications
+
+See [transaction processing](/how-skale-works/transaction-processing) for more.
+
+### Standard Processing
+
+### Multi-transaction Mode (MTM)
+
+## Gas Fee Configurations
+
+## Native Bridge (IMA) Configuration
+
+## DAO Ownership Configuration
