--- a/src/content/docs/run-a-skale-chain/intro-to-schains.mdx
+++ b/src/content/docs/run-a-skale-chain/intro-to-schains.mdx
@@ -20,7 +20,7 @@ The following is the step-by-step operation for SKALE Chain setup and creation:
 
 ### After sChain Creation
 
-Once your SKALE Chain is created, we recommend working through the following documentation in order:
+Once your SKALE Chain is created, we recommend working through the following documentation:
 
 1. [sChain Operations](/run-a-skale-chain/schain-operations)
 2. [Using Multisig Wallet CLI](/run-a-skale-chain/using-multisig-wallet-cli)
