--- a/src/content/docs/run-a-skale-chain/customize-schain.mdx
+++ b/src/content/docs/run-a-skale-chain/customize-schain.mdx
@@ -21,21 +21,11 @@ The following configurations are available:
 {/* <!-- TODO need full list of configuration options w/ graphics --> */}
 {/* <!-- Max State: 90% contract, 10% consensus, max filestorage: 80% filestorage, 10% state, 10% consensus, max consensus: 90% consensus, 10% state, default: 33% each --> */}
 
-## Config Controller Configurations
+## Transaction Processing
 
 SKALE Chains have two options when it comes to transaction processing.
 
-- **Standard Processing**: allows for a single transaction per wallet per block. Great for chains interested in more robust protections
-- **Multi-transaction Mode**: great for chains catering to high-throughput applications
+- **Standard Processing**: allows for a single transaction per account/wallet per block. Great for chains interested matching Ethereum's transaction processing architecture
+- **Multi-transaction Mode (Recommended)**: great for chains catering to high-throughput applications
 
 See [transaction processing](/how-skale-works/transaction-processing) for more.
-
-### Standard Processing
-
-### Multi-transaction Mode (MTM)
-
-## Gas Fee Configurations
-
-## Native Bridge (IMA) Configuration
-
-## DAO Ownership Configuration
