Fix comments breaking build

--- a/src/content/docs/run-a-skale-chain/recommended-contract-deployments.mdx
+++ b/src/content/docs/run-a-skale-chain/recommended-contract-deployments.mdx
@@ -3,11 +3,11 @@ title: Recommended Contract Deployments
 description: The following is a list and guide to deploying common smart contracts on your sChain
 ---
 
-<!-- TODO -->
-- Multicall3
+{/*<!-- TODO -->*/}
+{/*- Multicall3
 - Create2Deployer
 - CreateX
 - Create2Factory
 - Entrypoint V0.6
 - Entrypoint V0.7
--
+*/}
