Add Storage Locations & Options Graphics for Customize sChain Configuration

--- a/src/content/docs/run-a-skale-chain/customize-schain.mdx
+++ b/src/content/docs/run-a-skale-chain/customize-schain.mdx
@@ -21,6 +21,9 @@ The following configurations are available:
 {/* <!-- TODO need full list of configuration options w/ graphics --> */}
 {/* <!-- Max State: 90% contract, 10% consensus, max filestorage: 80% filestorage, 10% state, 10% consensus, max consensus: 90% consensus, 10% state, default: 33% each --> */}
 
+<img src="/storage-locations.jpg" alt="sChain Storage Key" />
+<img src="/storage-options.jpg" alt="sChain Storage Options" />
+
 ## Transaction Processing
 
 SKALE Chains have two options when it comes to transaction processing.
