Create Custom Contract Example

--- a/src/content/docs/skale-bridge/messaging-layer/connect-custom-contracts.mdx
+++ b/src/content/docs/skale-bridge/messaging-layer/connect-custom-contracts.mdx
@@ -1,4 +1,4 @@
 ---
-title: Gas Fees
-description: Gas Fees on SKALE
+title: Connect Custom Contracts
+description: Learn how to connect your custom contracts via IMA
 ---
