--- a/src/content/docs/skale-bridge/messaging-layer/create-custom-contracts.mdx
+++ b/src/content/docs/skale-bridge/messaging-layer/create-custom-contracts.mdx
@@ -1,4 +1,16 @@
 ---
-title: Gas Fees
-description: Gas Fees on SKALE
+title: Create Custom Contracts
+description: Learn how to create contracts that use SKALE's IMA Messaging Layer
 ---
+
+import { Aside, Code } from "@astrojs/starlight/components";
+import sendNumberExample from "./examples/SendNumber.sol?raw";
+
+The following will guide you through an example implementation of using SKALE's Native Messaging Layer to send custom information back and forth between SKALE Chains.
+The following implements a bi-directional flow of data to showcase both sending and receiving clearly, however, contracts can easily implement a one-way flow.
+
+<Code code={sendNumberExample} lang="solidity" title="SendNumber.sol" />
+
+<Aside type="caution">
+Don't forget to register your smart contracts on MessageProxyForSchain next! See [Connect Custom Contracts](/skale-bridge/messaging-layer/connect-custom-contracts) for next steps!
+</Aside>
