Add Additional Context, Prepare Connection Doc

--- a/src/content/docs/skale-bridge/messaging-layer/connect-custom-contracts.mdx
+++ b/src/content/docs/skale-bridge/messaging-layer/connect-custom-contracts.mdx
@@ -2,3 +2,17 @@
 title: Connect Custom Contracts
 description: Learn how to connect your custom contracts via IMA
 ---
+
+import { Aside } from "@astrojs/starlight/components";
+
+<Aside type="note">
+The following requires `EXTRA_CONTRACT_REGISTRAR_ROLE` on the account calling **registerExtraContract**.
+</Aside>
+
+## Adding Extra Contract Registrar Role
+
+
+
+## Registering Contracts on a SKALE Chain
+
+## Registering Contracts on Ethereum
