Bridge ERC-721 Ethereum -> SKALE Completed

--- a/src/content/docs/skale-bridge/ethereum/bridge-erc20.mdx
+++ b/src/content/docs/skale-bridge/ethereum/bridge-erc20.mdx
@@ -130,10 +130,10 @@ A direct ERC-20 deposit will result in tokens being delivered to the specified w
 </Aside>
 
 <Tabs>
-  <TabItem label="normalDeposit.js">
+  <TabItem label="bridge.js">
     <Code code={depositERC20Js} lang="js" />
   </TabItem>
-  <TabItem label="directDeposit.js">
+  <TabItem label="bridgeDirect.js">
     <Code code={depositERC20DirectJs} lang="js" />
   </TabItem>
 </Tabs>
